k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
